@@ -1,5 +1,5 @@
 
-Warning: Call-time pass-by-reference has been deprecated in C:\wamp\www\__smarty3Alpha\development\PHPunit\StreamResourceTests.php on line 221
+Warning: Call-time pass-by-reference has been deprecated in C:\wamp\www\__smarty3Alpha\development\PHPunit\StreamResourceTests.php on line 222
 
 Warning: Call-time pass-by-reference has been deprecated in C:\wamp\www\__smarty3Alpha\development\PHPunit\StreamVariableTests.php on line 89
 PHPUnit 3.3.15 by Sebastian Bergmann.
@@ -200,6 +200,6 @@ Smarty 3 - Unit Tests Report
  XmlTests
  ...
 
-Time: 4 seconds
+Time: 6 seconds
 
 OK (464 tests, 563 assertions)
